files/ingress-core.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-videp-server-core
spec:
  rules:
  - host: grpc-videp-server.apps.tkg.corelab.core-software.ch
    http:
      paths:
      - backend:
          service:
            name: grpc-videp-server-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grpc-videp-server.apps.tkg.corelab.core-software.ch
    secretName: core-tls-secret
