files/ingress-forti.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-videp-server-fort
spec:
  rules:
  - host: grpc-videp-serve.apps.tkg.fortidemo.ch
    http:
      paths:
      - backend:
          service:
            name: grpc-videp-serve-svc
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grpc-videp-serve.apps.tkg.fortidemo.ch
    secretName: tdh-tls-secret
